// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CardHeaderYotpoRatingThumbs/> render() should render children and green thumb 1`] = `
<span
  class="container "
>
  <strong>
    3
  </strong>
  <span
    class="material-icons greenThumb"
  >
    thumb_up
     
  </span>
</span>
`;

exports[`<CardHeaderYotpoRatingThumbs/> render() should render children and red thumb 1`] = `
<span
  class="container "
>
  <strong>
    1
  </strong>
  <span
    class="material-icons redThumb"
  >
    thumb_down
     
  </span>
</span>
`;
